# auto_edit_video

./: .gitignore  README.md  build.py  dmg_settings.py  main.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
.github/workflows/: build.yml
app/: __init__.py
app/analysis/: __init__.py  silence_detector.py
app/core/: __init__.py  i18n.py  models.py  settings.py
app/core/i18n/locales/: .gitkeep
app/export/: __init__.py  edl.py  fcpxml.py  premiere_xml.py
app/media/: __init__.py  ffmpeg.py  ffmpeg_installer.py  waveform.py
app/transcript/: __init__.py  transcriber.py
app/ui/: __init__.py  main_window.py  settings_dialog.py  timeline_widget.py  tour_dialog.py  video_player.py  worker.py
app/ui/styles/: dark.qss  light.qss
resources/: icon.icns
tests/: __init__.py  test_fcpxml.py  test_models.py  test_silence_detector.py
