[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autocut"
version = "0.1.0"
description = "Automatic silence removal tool with FCPXML export"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "AutoCut Team" }
]
keywords = ["video", "audio", "silence", "fcpxml", "final-cut-pro", "editing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",
]

dependencies = [
    "PySide6>=6.6.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "ffmpeg-python>=0.2.0",
    "python-mpv>=1.0.0",
    "lxml>=5.0.0",
    "faster-whisper>=0.10.0",
    "webrtcvad>=2.0.10",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
gpu = [
    "torch>=2.1.0",
    "openai-whisper>=20231117",
]

[project.scripts]
autocut = "main:main"

[project.gui-scripts]
autocut-gui = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
